--- a/templates/plastic-surgery/blepharoplasty.html
+++ b/templates/plastic-surgery/blepharoplasty.html
@@ -1,1 +1,249 @@
-Helllll
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block title %}HealMount - Medical Tourism Platform{% endblock %}
+
+{% block body %}
+
+<main>
+    <link rel="stylesheet" href="{% static 'css/text.css' %}" />
+    <section class="service-section my-5">
+        <div class="container">
+          <h1 class="service-title">Blepharoplasty</h1>
+          <div class="custom-divider"></div>
+          <div class="service-content">
+            <div class="service-image"></div>
+            <div class="service-description">
+              <h2>General information</h2>
+              <p>
+                Plastic surgery on eyelids is a popular cosmetic reconstructive
+                surgery, which corrects condition of the upper and lower
+                eyelids. As a result of blepharoplasty the excessive fat and
+                skin, as well as muscular tissue of upper and lower eyelids are
+                removed. The effect of ptosis of upper eyelid, caused by a weak
+                muscular tone or injury of muscular nerve is eliminated.
+                Excessive skin and fat around your eyes create illusion of
+                weariness, inflammation or of more mature age, and ptosis leads
+                to limitation of peripheral sight in the upper and lateral
+                areas. Many people have the inherent heavy, lowered upper
+                eyelids, and also strongly swelled up bottom eyelids, though for
+                the majority of us it is a sign of natural aging. Plastic
+                surgery on eyelids improves appearance, expands area of
+                peripheral sight and in many cases lowers intraocular pressure,
+                especially for people using forehead muscles for lifting of
+                unduly lowered upper eyelids. As a result of plastic surgery on
+                eyelids you shall have a possibility to gain maximum aesthetic
+                effect with the minimum invasive syndrome. Today it is one of
+                the most numerous and exact surgeries of face. Blepharoplasty
+                does not eliminate “goose pads”, does not lift beetling
+                eyebrows, does not delete dark circles under the eyes and small
+                mimic wrinkles (for this purpose there are other methods).
+              </p>
+              <h2>The best candidates for blepharoplasty</h2>
+
+              <p>
+                Ideal candidates for blepharoplasty are physically healthy,
+                emotionally steady people, who are well informed about the
+                surgery. These are patients who are realistic in the
+                expectations, with medical indications typical for this
+                procedure. The age, at least, shall be over thirty five. However
+                there are no obstacles for solving existing problems at an
+                earlier age too, especially in case of presence of difficult
+                forms of inherent diseases of eyelids. Contra-indications:
+                raised blood pressure, hypothyroidism, serious cardiovascular
+                diseases, diabetes, glaucoma, Graves disease, detachment of
+                retina, xerophthalmia and diseases of a thyroid gland.
+                Counter-indications may also be conditioned by specific anatomic
+                features of your body interfering with performance of the
+                surgery. The obligator condition for this surgery is discussion
+                of any medical problems with your ophthalmologist prior to
+                taking the decision on carrying out blepharoplasty.
+              </p>
+              <h2>Preparation for surgery</h2>
+              <p>
+                Preparation for surgery begins with passing a full medical
+                examination and ends with the complete list of recommendations
+                for the postoperative period. At carrying out preliminary
+                examination, therapist draws the conclusion about absence of
+                somatic pathology leading to hypostases of eyelids. The
+                ophthalmologist estimates the patient about quality of sight, a
+                condition sclera, eye pressure and functionality of the lacrimal
+                apparatus. If an insufficient efficiency of the lacrimal
+                apparatus is detected the surgery shall not be carried out. It
+                is not the least important to pay attention to the general
+                physical condition of the patient. In particular, quit smoking,
+                drinking alcohol, administration of hormonal and psychotropic
+                preparations. Special attention must be paid to abstention from
+                administration of medication ten-fourteen days prior to
+                blepharoplasty, because it increases risk of bleeding. It is
+                preferable to carry out the surgery at the beginning and the
+                middle of a menstrual cycle. Preparation for surgery also
+                includes joint discussion of wishes of the patient and possible
+                realization of those. On the day of surgery, antibacterial and
+                antiviral medications are prescribed for administration, with
+                continuation of it for about five days after the surgery for the
+                purpose of prevention of a virus and bacterial infection. Food
+                ingestion shall be stopped six hours prior to blepharoplasty.
+              </p>
+              <h2>The Surgery</h2>
+              <p>
+                Plastic surgery on eyelids is a relatively painless procedure.
+                Operation is carried out under the general or local anesthesia.
+                The technique of the surgery is individual for each patient and
+                is conditioned by the personal surgical plan. The choice of
+                anesthesia, in many respects depends on individual features of
+                the patient, and also on the planned volume of operative
+                intervention. The anesthesiologist will apply the treatment,
+                allowing you not to feel any pain during the entire surgery,
+                guaranteeing your full safety and the minimum postoperative
+                discomfort. The procedure usually takes 1-1.5 hours, depending
+                on complexity of blepharoplasty. We distinguish blepharoplasty
+                of the upper and lower eyelids. Usually the surgeon carries out
+                sections on natural folds of upper eyelids, and slightly below
+                the eyelashes on lower eyelids. Sections are carried out by a
+                traditional scalpel or by a laser. The top sections go along the
+                eyelid, from internal corners to external edge. The surgeon
+                removes excess skin and fat in quantity necessary for receiving
+                desirable result. Prolapse of eyelids skin is often aggravated
+                with shift of excess tissues of the forehead below the line of
+                eyebrows. In that case, to achieve positive cosmetic effect, the
+                surgeon needs not only to remove excess skin of upper eyelids,
+                but also to raise the line of eyebrows. The best effect in such
+                cases is achieved by blepharoplasty of upper eyelids at the same
+                time with endoscopic forehead uplift. As a result of operation
+                the surgeon will straighten the skin over upper eyelids, will
+                remove its excesses, will lift the eyebrows which hang over eyes
+                and will smoothen the forehead skin. At plastic surgery of lower
+                eyelids the operational section is carried out directly under
+                ciliary edge or from the interior of a lower eyelid. The second
+                type of a section is called transconjunctival. It is a more
+                modern method which is not leaving any visible scars. In the
+                area of lower eyelids there is a prolapse of soft facial tissues
+                because of eventual stretching and weakening of ligaments of
+                muscles. These changes look as lowering of the lower eyelid,
+                extension of the lower portion of the muscle, surrounding the
+                eye, emergence of “sacks” under your eyes, when intra- orbital
+                fat isn’t kept in an eye-socket orbicular muscle of eye and the
+                weakened orbital septum. Depending on defects, the surgeon in an
+                individual order selects the mode of lower eyelids
+                blepharoplasty. If it is necessary to eliminate excess skin and
+                fatty “hernias”, a section from outer side of an eyelid directly
+                under the line of eyelashes is usually made. Through such
+                sections excess of fatty tissue is removed, and then excess skin
+                is removed. When there is no excess skin, the transconjunctival
+                method of blepharoplasty is selected. Such option is ideally
+                suited for young patients, where the problem is only about for
+                whom the problem is only about eye-sacks. Excess of fat is
+                removed by means of the laser. Further, sections are closed up
+                with tiny stitches, which are taken out in a week, at the most.
+                Insignificant bruises which usually reabsorb by the end of the
+                week, are possible. No special surgical debridement is
+                necessary.
+              </p>
+              <h2>Post-surgical period</h2>
+              <p>
+                The structure of paraorbital area substantially differs from all
+                other parts of a human body. In the area of upper and lower
+                eyelids, a muscle lies immediately under the skin – m.
+                orbicularis okuli, whereas in all other zones of a human body
+                directly under the skin there is a layer of hypodermic fatty
+                tissue. Due to this, the blood supply of the upper and lower
+                eyelids is much better and process of healing passes much
+                quicker. After operation blepharoplasty the patient usually
+                remains in clinic for one day. Within three-six hours after
+                completion of procedure, bandages are placed upon eyes, with
+                subsequent imposing of cold compresses. To the majority of
+                patients antibacterial drops are prescribed for the first few
+                days. Post-surgical stitches are taken out in three-seven days
+                with further use of protective stickers on suture line. The
+                majority of patients can return to work in seven-ten days, with
+                obligatory use of decorative cosmetics and sun-protection
+                creams. Wearing contact lenses is not recommended within first
+                two weeks, and the make-up can be used not earlier than in ten
+                days. Thin post-surgical stitches turn pale and practically
+                disappear completely in two-three months. Bruises reabsorb much
+                quicker, usually within ten – twelve days, hematomas on eye
+                whites can remain slightly longer, about three weeks. On the
+                initial stage of recovery it is necessary to avoid the increased
+                physical activities, active sexual contacts. Starting from the
+                second day after the surgery special exercises for eyes are to
+                be performed. Exclude alcohol and TV for the entire
+                post-surgical rehabilitation period.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact-section">
+        <div class="contact-background">
+          <div class="container">
+            <div class="row align-items-center">
+              <!-- Left Text Section -->
+              <div class="col-md-6 text-left">
+                <h2 class="contact-heading">SPEAK WITH OUR EXPERTS</h2>
+                <p>Book your consultation now.</p>
+                <a href="#" class="btn btn-primary schedule-call-button"
+                  >Schedule a free call now</a
+                >
+
+                <!-- Contact Details -->
+                <div class="contact-details mt-4">
+                  <h5>Contact us</h5>
+                  <p><strong>Email:</strong> contact@healmount.com</p>
+                  <p><strong>Phone:</strong> +374 44 43 48 41</p>
+                  <a
+                    href="https://www.linkedin.com/company/vickino"
+                    target="_blank"
+                    class="linkedin-link"
+                  >
+                    <i class="fab fa-linkedin"></i> Follow us on LinkedIn
+                  </a>
+                </div>
+              </div>
+
+              <!-- Right Column for Form -->
+              <div class="col-md-6">
+                <div class="contact-form-wrapper">
+                  <h2 class="form-title">SEND US A MESSAGE</h2>
+                  <form>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <textarea
+                        class="form-control"
+                        rows="4"
+                        placeholder="Your message"
+                        required
+                      ></textarea>
+                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-primary send-message-button"
+                    >
+                      Send now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+{% endblock %}
