--- a/templates/plastic-surgery/face-lift.html
+++ b/templates/plastic-surgery/face-lift.html
@@ -1,1 +1,207 @@
-Hello
+Hello{% extends "base.html" %}
+
+{% load static %}
+
+{% block title %}HealMount - Medical Tourism Platform{% endblock %}
+
+{% block body %}
+
+<main>
+    <link rel="stylesheet" href="{% static 'css/text.css' %}" />
+    <section class="service-section my-5">
+        <div class="container">
+          <h1 class="service-title">Face Lift Surgery</h1>
+          <div class="custom-divider"></div>
+          <div class="service-content">
+            <div class="service-image"></div>
+            <div class="service-description">
+              <h2>General information</h2>
+              <p>
+                Operational interventions for the purpose of face rejuvenation
+                are being carried out for more than one hundred years. In the
+                course of time face skin starts to change essentially, its cells
+                divide slower, dermis (deeper layer of skin), becomes thinner.
+                The dermis consists of several types of tissue, mostly elastin
+                and collagen. Elastin gives to skin elasticity, and collagen
+                keeps its flexible. But sooner or later both components start to
+                “grow old”, forcing our skin to change as well. Loss of
+                elasticity and decrease of flexibility create conditions for
+                more intensive manifestation of aging effect on the entire depth
+                of skin and muscular tissue of facial area. Wrinkles and deep
+                folds start to appear on the skin, age changes of the entire
+                shape of the face begin to form.The face lifting is unable to
+                eliminate all age changes of skin, but, at least, it can reverse
+                many visible consequences of time. In 2018 only in Europe and
+                the USA more than seven hundred thousand people paid money for
+                new youth, for new look and underwent procedure of face,
+                forehead or neck lifting. The surgery of face lifting is
+                developed and intended for recovery of younger look of the
+                person, eliminating deep wrinkles and folds, supporting
+                weakening skin and face muscles. The majority of people after
+                procedure of a face lifting look 10 years younger, and the
+                standard guaranteed result of a face lifting remains 7-10 years.
+              </p>
+              <h2>Surgery planning</h2>
+
+              <p>
+                Face skin reconstruction is a procedure that requires individual
+                approach. Therefore at this stage detailed examination of the
+                patient’s face, his personal anatomy and bone structures is
+                extremely important. The plastic surgeon shall study in detail
+                complete medical history of the patient, and the patient shall
+                ask the doctor about expectations, possible concerns and chances
+                to get desirable result. After the analysis of photos and
+                necessary number of consultations together with the plastic
+                surgeon, patient’s expectations from the face uplift surgery are
+                shaped up into an exact idea.
+              </p>
+              <h2>Preparation for surgery</h2>
+              <p>
+                Preparation for surgery begins with passing a full medical
+                examination and ends with the complete list of surgeon’s
+                recommendations for the postoperative period. At preliminary
+                examination all standard medical tests shall be undergone:
+                general blood analysis, common urine analysis, biochemical blood
+                assay, blood electrolytes, blood analysis for syphilis, HIV,
+                hepatitis, ECG. In case of any counter-indications based upon
+                tests, in-depth examination is carried out: full scale
+                biochemical blood analysis, ultrasound examination of internal
+                organs, supplementary consultations with specialists. Serious
+                attention shall be paid to general physical condition of the
+                patient, particularly, the patient must quit smoking and alcohol
+                consumption, stop taking hormonal and psychotropic medication.
+                Special attention is paid to abstention within 10-14 days from
+                taking medication, which increases the risk of postoperative
+                hemorrhage. Hair shall be long enough to hide post-surgical
+                hems. In case of necessity hair can be colored, as next such
+                opportunity will occur one month after the surgery. At least two
+                weeks prior to the operation it is necessary to stop getting sun
+                tan. The surgery, preferably, shall be carried out in the
+                beginning or in the middle of the menstrual cycle. Preparation
+                to the surgery also includes discussion of patient’s wishes and
+                possibilities of their realization. For this purpose it is
+                recommended to look at the photos of people taken after similar
+                surgeries. On the day of surgery antibacterial and antiviral
+                medication is prescribed, which shall be taken for necessary
+                period of time in order to prevent viral and bacterial
+                infection. No food shall be taken for 6-8 hours prior to the
+                surgery, yet some anesthesiologists allow a few sips of water 2
+                hours prior to the surgery. It is vitally important to discuss
+                and sign the medical services contract prior to the surgery.
+              </p>
+              <h2>The Surgery</h2>
+              <p>
+                Face uplift plastic surgery is a rather complicated procedure.
+                The surgery is carried out under general anesthesia. The
+                technique of the surgery is individual for each patient and is
+                conditioned by personal plan of the surgery. Type of anesthesia
+                also depends on individual peculiarities of the patient, as well
+                as on the level of planes operative intervention. In any case,
+                the anesthesiologist shall apply necessary medication, which
+                allow not to feel any pain during the entire operation, thus
+                guaranteeing full safety and minimal post-surgical discomfort.
+                The entire procedure usually takes from 1 to 3 hours, depending
+                on surgical technique applied, peculiarities of facial
+                structure, tasks and objectives, defined before the surgery.
+                Each surgeon achieves specified goals by his own, the only
+                correct in the particular case, method and technique of surgery.
+                Depending on peculiarities of muscular structure and
+                professional skills, the surgeon selects methodology of the
+                surgery. The doctor may carry out manipulations on one side of
+                the face and then go to the other side. Alternatively he can, in
+                maximally coordinated manner, carry out the surgery on the
+                entire face. Location of sections is conditioned by the area of
+                uplift of skin and muscular tissue. In case of chicks uplift the
+                section is made from the temporal region, a bit above the
+                hairline, along the ear contour; in case of surgeries on tissues
+                of the lower thirds of the face – inside the mouth cavity, in
+                case of forehead skin uplift – in parietal region; if the
+                surgery is carried out on neck tissues – along the fold under
+                the chin. In any case, the surgeon separates the skin from fat
+                along the edges of the muscular tissue. Further, the superficial
+                muscles are lifted and relocated. Then the surgeon clamps
+                muscular and connecting tissues, draws the skin up and
+                backwards, removes excess skin and puts required number of
+                stitches. Excess fat is removed from the areas of neck, chin,
+                and lower third of the face in order to improve its shape and
+                contour. On flat skin zones of the head application of metallic
+                clips is possible. For removal of lymph and remnants of blood a
+                subcutaneous drain is placed behind the auricle. Necessary
+                bandages are applied at the end of the surgery.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact-section">
+        <div class="contact-background">
+          <div class="container">
+            <div class="row align-items-center">
+              <!-- Left Text Section -->
+              <div class="col-md-6 text-left">
+                <h2 class="contact-heading">SPEAK WITH OUR EXPERTS</h2>
+                <p>Book your consultation now.</p>
+                <a href="#" class="btn btn-primary schedule-call-button"
+                  >Schedule a free call now</a
+                >
+
+                <!-- Contact Details -->
+                <div class="contact-details mt-4">
+                  <h5>Contact us</h5>
+                  <p><strong>Email:</strong> contact@healmount.com</p>
+                  <p><strong>Phone:</strong> +374 44 43 48 41</p>
+                  <a
+                    href="https://www.linkedin.com/company/vickino"
+                    target="_blank"
+                    class="linkedin-link"
+                  >
+                    <i class="fab fa-linkedin"></i> Follow us on LinkedIn
+                  </a>
+                </div>
+              </div>
+
+              <!-- Right Column for Form -->
+              <div class="col-md-6">
+                <div class="contact-form-wrapper">
+                  <h2 class="form-title">SEND US A MESSAGE</h2>
+                  <form>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <textarea
+                        class="form-control"
+                        rows="4"
+                        placeholder="Your message"
+                        required
+                      ></textarea>
+                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-primary send-message-button"
+                    >
+                      Send now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+{% endblock %}
