--- a/static/css/dentists.css
+++ b/static/css/dentists.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f9f9ff;
-  background-image: url("images/background.jpg");
+  background-image: url("/static/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
