--- a/templates/dentists.html
+++ b/templates/dentists.html
@@ -11,7 +11,7 @@
 
 <main>
     <!-- Plastic Surgeons Section -->
-    <section id="dentist" class="dentist my-5">
+    <section id="dentist" class="dentist ">
         <div class="container">
             <h2 class="text-center mb-4">Dentists</h2>
             <!-- Search Bar Section -->
