--- a/templates/plastic-surgeons.html
+++ b/templates/plastic-surgeons.html
@@ -13,7 +13,7 @@
 
 <main>
   <!-- Plastic Surgeons Section -->
-  <section id="plastic-surgeons" class="plastic-surgeons my-5">
+  <section id="plastic-surgeons" class="plastic-surgeons ">
     <div class="container">
       <h2 class="text-center mb-4">Plastic Surgeons</h2>
       <!-- Search Bar Section -->
