--- a/templates/services.html
+++ b/templates/services.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-<section class="services my-5">
+<section class="services">
     <div class="container">
         <h2 class="text-center">Our Services</h2>
         <p class="text-center">
