--- a/static/css/login-register.css
+++ b/static/css/login-register.css
@@ -28,6 +28,7 @@ body {
   width: 400px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
+  margin-top: 100px;
 }
 
 .auth-card h2 {
