--- a/static/css/dentists.css
+++ b/static/css/dentists.css
@@ -56,7 +56,7 @@ body {
 .dentist-card:hover {
   transform: translateY(-5px);
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
-  background-color: #91c4f1;
+  background-color: #b0c4d4;
 }
 
 .dentist-image {
