--- a/static/css/header.css
+++ b/static/css/header.css
@@ -115,7 +115,7 @@ h1 {
 }
 
 .dropdown-menu a:hover {
-  background-color: #91c4f1;
+  background-color: #b0c4d4;
   color: #000;
   border-radius: 12px;
 }
