--- a/static/css/login-register.css
+++ b/static/css/login-register.css
@@ -90,7 +90,7 @@ body {
 
 /* Button Styling */
 .btn {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   margin-left: auto;
   border: none;
   padding: 10px 70px;
@@ -166,7 +166,7 @@ body {
 }
 
 .close-modal {
-  background-color: #6d98d9;
+  background-color: #b0c4d4;
   margin-left: auto;
   border: none;
   padding: 10px 70px;
