--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
           <img
             src="{% static 'images/Plastic-surgery.png' %}"
             alt="Plastic-surgery"
-            class="plastic-surgery-icon"
+            class="plastic-surgery-icon" style="width: 40px; height: 40px;"
           />
           <h3>Plastic Surgery</h3>
           <p>
@@ -38,6 +38,7 @@
             src="{% static 'images/Dentistry.png' %}"
             alt="Dentistry"
             class="dentistry-icon"
+            style="width: 50px; height: 50px;"
           />
 
           <h3>Dentistry</h3>
@@ -54,6 +55,7 @@
             src="{% static 'images/Clinics.png' %}"
             alt="Clinics"
             class="clinics-icon"
+            style="width: 60px; height: 60px;"
           />
           <h3>Clinics</h3>
           <p>Choose a hospital from <br />thousands of trusted clinics.</p>
