--- a/templates/partnership.html
+++ b/templates/partnership.html
@@ -13,8 +13,8 @@
         <h1 class="partnership-title">Partner with Us</h1>
         <div class="custom-divider"></div>
         <div class="partnership-content">
-          <div class="partnership-image"></div>
-          <div class="service-description">
+            
+          <div class="partnership-description">
             <h2>Benefits of Partnership</h2>
             <p>
                 There are many ways companies can benefit by partnering with the International Healthcare Research Center. Possibilities include:
@@ -25,6 +25,11 @@
                 One-on-one collaborations with faculty, researchers and graduate students
                 Visiting-scholar opportunities for research staff
             </p>
+            <img
+            src="/static/images/Partnership.jpg"
+            alt="Partner Image"
+            class="partner_image" 
+    />
             <h2>Travel and Hospitality Industry: Creating Seamless Medical Tourism Experiences</h2>
             <p>
                 Healthcare providers can benefit from collaborating with travel agencies, hotels, and other hospitality businesses to create seamless, end-to-end medical tourism experiences. Some advantages of partnering with the travel and hospitality industry include:
