--- a/static/css/dentistry.css
+++ b/static/css/dentistry.css
@@ -66,7 +66,7 @@ p,
   transform: translateY(-5px);
   /* Slightly lift button on hover */
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-  background-color: #91c4f1;
+  background-color: #b0c4d4;
   /* Increase shadow on hover */
 }
 
