--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,6 +1,6 @@
 /* Footer */
 #footer {
-  background: linear-gradient(90deg, #8cc7f8, #6d98d9);
+  background: linear-gradient(90deg, #b0c4d4, #314d6d);
   /* Linear gradient from left to right */
   padding: 2rem 0;
   color: white;
