--- a/static/css/partner.css
+++ b/static/css/partner.css
@@ -33,7 +33,7 @@ body {
 }
 
 .left-section .btn {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   color: white;
   padding: 0.75rem 1.5rem;
   border-radius: 8px;
@@ -47,7 +47,7 @@ body {
 
 .right-section {
   width: 50%;
-  background-color: #8bb3ee;
+  background-color: #b0c4d4;
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -97,7 +97,7 @@ body {
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
-  color: #6d98d9;
+  color: #314d6d;
 }
 
 .input-with-icon input {
@@ -109,7 +109,7 @@ body {
 }
 
 .btn-primary {
-  border: #6d98d9;
+  border: #314d6d;
 }
 
 .partner_image {
