--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Mulish", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f9f9ff;
+  background-color: #f7f4f0;
   background-image: url("/static/images/background.jpg");
   /* Path to your image */
   background-size: cover;
@@ -206,7 +206,7 @@ h1 {
 }
 
 .btn-primary {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   margin-left: 40px;
   border: none;
   padding: 10px 70px;
@@ -216,15 +216,15 @@ h1 {
 }
 
 .btn-primary:hover {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   transform: scale(1.05);
   /* Slightly enlarge on hover */
 }
 
 .btn-outline-primary {
   background-color: white;
-  color: #6d98d9;
-  border: 2px solid #6d98d9;
+  color: #314d6d;
+  border: 2px solid #314d6d;
   padding: 10px 60px;
   font-weight: 600;
   border-radius: 40px;
@@ -232,7 +232,7 @@ h1 {
 }
 
 .btn-outline-primary:hover {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   /* Blue background on hover */
   transform: scale(1.05);
   /* Slightly enlarge on hover */
@@ -290,7 +290,7 @@ h1 {
   transform: translateY(-5px);
   /* Slightly lift button on hover */
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-  background-color: #91c4f1;
+  background-color: #b0c4d4;
   /* Increase shadow on hover */
 }
 
@@ -424,7 +424,7 @@ h1 {
 }
 
 .news-link {
-  color: #6d98d9;
+  color: #314d6d;
   font-weight: 600;
   text-decoration: none;
 }
@@ -436,7 +436,7 @@ h1 {
 
 /* Access More News Button */
 .news-more-button {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   color: #ffffff;
   font-weight: 600;
   padding: 0.75rem 2rem;
@@ -530,7 +530,7 @@ h1 {
 }
 
 .article-footer .article-link {
-  color: #6d98d9;
+  color: #314d6d;
   font-weight: 600;
   text-decoration: none;
 }
@@ -549,7 +549,7 @@ h1 {
 }
 
 .article-more-button {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   color: #ffffff;
   font-weight: 600;
   padding: 0.6rem 2rem;
@@ -583,7 +583,7 @@ h1 {
 }
 
 .schedule-call-button {
-  background-color: #6d98d9;
+  background-color: #314d6d;
   color: #ffffff;
   font-weight: 600;
   padding: 0.75rem 1.5rem;
@@ -604,7 +604,7 @@ h1 {
 .linkedin-link {
   display: flex;
   align-items: center;
-  color: #6d98d9;
+  color: #314d6d;
   font-weight: 600;
   text-decoration: none;
   margin-top: 1rem;
@@ -618,7 +618,7 @@ h1 {
 
 /* Right Column Form Styling */
 .contact-form-wrapper {
-  background-color: #87aee7;
+  background-color: #b0c4d4;
   opacity: 90%;
   /* Blue background */
   padding: 2rem;
@@ -656,8 +656,8 @@ h1 {
 }
 
 .send-message-button {
-  background-color: #ffffff;
-  color: #458ff6;
+  background-color: #314d6d;
+  color: #F7f4f0;
   font-weight: 600;
   padding: 0.75rem 2rem;
   border-radius: 8px;
